# mids-capstone-domain-validation

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_connection.ipynb
backend/: pyproject.toml
backend/src/: main.py
backend/src/model/: model_utils.py
dv_classifier_app/: pyproject.toml
features_and_model/: CA_MAPPING.csv  EDA_white_black_list.ipynb  features.csv  whitelist_final_exact.csv
frontend/: Dockerfile  README.md  pyproject.toml
frontend/.streamlit/: config.toml  secrets.toml
frontend/src/: app.py  app_utils.py
frontend/src/pages/: 1_CA_Selection.py  2_Choose_Input_Method.py  3_API_Instructions.py  4_Upload_CSV.py
src/: app.py  utils.py
src/dv_classifier_app/: app.py  aws_clients.py  model.py  utils.py
src/model/: model.py  model_utils.py
