[project]
name = "dv-classifier-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Kyle Wong",email = "kylewong@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "dv_classifier_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
