[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for domain validation"
authors = [
    {name = "Kyle Wong",email = "kylewong@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)"
]

[tool.poetry]
packages = [
    {include = "src", from = "."},
    {include = "model", from = ".."}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
