[project]
name = "dv-classifier-app"
version = "0.1.0"
description = "Streamlit frontend for domain validation"
authors = [
    {name = "Kyle Wong",email = "kylewong@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "boto3 (>=1.38.36,<2.0.0)",
    "uuid (>=1.30,<2.0)",
    "levenshtein (>=0.27.1,<0.28.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)"
]

[tool.poetry]
packages = [
    {include = "src", from = "."},
    {include = "model", from = ".."}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
